--- a/UI/app.config
+++ b/UI/app.config
@@ -31,6 +31,18 @@
             <setting name="HistologySlideLabelPrinterName" serializeAs="String">
                 <value>Histology Slide Label Printer</value>
             </setting>
+            <setting name="LocalDICFile" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.dic</value>
+            </setting>
+            <setting name="LocalAFFFile" serializeAs="String">
+                <value>C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.aff</value>
+            </setting>
+            <setting name="ServerDICFile" serializeAs="String">
+                <value>\\ypiidc\YPIILIS\Dictionary\ypi-custom.dic</value>
+            </setting>
+            <setting name="ServerAFFFile" serializeAs="String">
+                <value>\\ypiidc\YPIILIS\Dictionary\ypi-custom.aff</value>
+            </setting>
         </YellowstonePathology.UI.Properties.Settings>
     </applicationSettings>    
   <startup>
