--- a/UI/Properties/Settings.settings
+++ b/UI/Properties/Settings.settings
@@ -26,5 +26,17 @@
     <Setting Name="HistologySlideLabelPrinterName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Histology Slide Label Printer</Value>
     </Setting>
+    <Setting Name="LocalDICFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.dic</Value>
+    </Setting>
+    <Setting Name="LocalAFFFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.aff</Value>
+    </Setting>
+    <Setting Name="ServerDICFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\ypiidc\YPIILIS\Dictionary\ypi-custom.dic</Value>
+    </Setting>
+    <Setting Name="ServerAFFFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\ypiidc\YPIILIS\Dictionary\ypi-custom.aff</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
