--- a/UI/app.config
+++ b/UI/app.config
@@ -32,10 +32,10 @@
                 <value>Histology Slide Label Printer</value>
             </setting>
             <setting name="LocalDICFile" serializeAs="String">
-                <value>C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.dic</value>
+                <value>C:\Program Files\Yellowstone Pathology Institute\ypi-custom.dic</value>
             </setting>
             <setting name="LocalAFFFile" serializeAs="String">
-                <value>C:\Program Files\Yellowstone Pathology Institute\Dictionary\ypi-custom.aff</value>
+                <value>C:\Program Files\Yellowstone Pathology Institute\ypi-custom.aff</value>
             </setting>
             <setting name="ServerDICFile" serializeAs="String">
                 <value>\\ypiidc\YPIILIS\Dictionary\ypi-custom.dic</value>
