--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -113,8 +113,7 @@
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="NHunspell">
-      <HintPath>..\..\..\..\Program Files\Yellowstone Pathology Institute\Dictionary\NHunspell.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>dll\NHunspell.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework.Luna" />
     <Reference Include="System" />
