--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -40,7 +40,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>191</ApplicationRevision>
+    <ApplicationRevision>193</ApplicationRevision>
     <ApplicationVersion>10.1.4.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -1854,6 +1854,9 @@
     <Compile Include="ValidationRules\IntValidation.cs" />
     <Compile Include="ValidationRules\SSNValidRule.cs" />
     <AppDesigner Include="Properties\" />
+    <Content Include="ypi-custom.lex">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Page Include="AdministrationWorkspace.xaml">
