--- a/YellowstonePathology.NetMQ/NetMQ.csproj
+++ b/YellowstonePathology.NetMQ/NetMQ.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Core\Utils\Switch.cs" />
     <Compile Include="DnsEndPoint.cs" />
     <Compile Include="EmptyArray.cs" />
+    <Compile Include="Hello3.cs" />
     <Compile Include="NetMQConfig.cs" />
     <Compile Include="INetMQPoller.cs" />
     <Compile Include="ISocketPollableCollection.cs" />
