--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -901,6 +901,10 @@
     <Compile Include="Test\CancelTestWarningPage.xaml.cs">
       <DependentUpon>CancelTestWarningPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocationResultPage.xaml.cs">
+      <DependentUpon>RUNX1RUNX1T1AML1ETOTranslocationResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocationResultPath.cs" />
     <Compile Include="Test\TCellSubsetAnalysisResultPage.xaml.cs">
       <DependentUpon>TCellSubsetAnalysisResultPage.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -2572,6 +2576,10 @@
     <Page Include="Test\CancelTestWarningPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Test\RUNX1RUNX1T1AML1ETOTranslocationResultPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Test\TCellSubsetAnalysisResultPage.xaml" />
     <Page Include="Test\TecanImportExportPage.xaml">
