--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -748,6 +748,10 @@
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHInconclusiveResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithMonosomyResult.cs" />
     <Compile Include="Test\ROS1ByFISH\ROS1ByFISHNegativeWithPolysomyResult.cs" />
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocation\RUNX1RUNX1T1AML1ETOTranslocationEPICOBXView.cs" />
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocation\RUNX1RUNX1T1AML1ETOTranslocationTest.cs" />
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocation\RUNX1RUNX1T1AML1ETOTranslocationTestOrder.cs" />
+    <Compile Include="Test\RUNX1RUNX1T1AML1ETOTranslocation\RUNX1RUNX1T1AML1ETOTranslocationWordDocument.cs" />
     <Compile Include="Test\Surgical\IntraoperativeConsultationResult.Validation.cs" />
     <Compile Include="Test\InformalConsult\InformalConsultTest.cs" />
     <Compile Include="Test\InformalConsult\InformalConsultTestOrder.cs" />
